--- a/src/app/initiative/initiative-item/initiative-item.component.css
+++ b/src/app/initiative/initiative-item/initiative-item.component.css
@@ -6,8 +6,12 @@
   background-color: lightcoral;
 }
 
-.initiative-item{
+.initiativeItem{
   max-width: 300px;
+}
+
+.blue .mat-grid-tile {
+  background-color: aquamarine;
 }
 
 .smallNum {
