--- a/src/app/initiative/initiative-item/initiative-item.component.html
+++ b/src/app/initiative/initiative-item/initiative-item.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="4" rowHeight="37.5px" class="initiative-item">
+<mat-grid-list cols="5" rowHeight="37.5px" [ngClass]="Vm.InitItemClasses">
   <mat-grid-tile
   [colspan]="3"
   [rowspan]="1">
@@ -10,19 +10,35 @@
     {{Vm.Item.InitiativeCount}}
   </mat-grid-tile>
   <mat-grid-tile
+  *ngIf="Vm.Item.ShowHp" 
   [colspan]="1"
   [rowspan]="1">
     <input type="number" class="smallNum" [(ngModel)]="Vm.Item.CurrentHp">/{{Vm.Item.MaxHp}}
   </mat-grid-tile>
+  <ng-container *ngFor="let status of Vm.Item.Status; let i = index">
+    <mat-grid-tile
+    [colspan]="2"
+    [rowspan]="1"
+    (click)="OnClickRemoveStatus(i)">
+      {{status}}
+    </mat-grid-tile>
+  </ng-container>  
   <mat-grid-tile
   [colspan]="3"
   [rowspan]="1">
-    <ng-container *ngFor="let status of Vm.Item.Status; let i = index">
-      {{status}}
-      <mat-icon class="fas fa-times-circle"></mat-icon>
-    </ng-container>  
-    <mat-icon class="fa fa-plus"></mat-icon>
-  <!-- <p>{{Vm.Item.StatusDisplay}}</p> -->
+    <ng-container *ngIf="!Vm.IsAddingStatus">
+      <button mat-icon-button (click)="OnClickAddStatus()">
+        <mat-icon class="fas fa-plus"></mat-icon>
+      </button>
+    </ng-container>
+    <ng-container *ngIf="Vm.IsAddingStatus">
+      <mat-form-field style="max-width:100px;">
+        <input matInput type="text" appearance="outline" (keydown)="OnPressEnter($event)" [(ngModel)]="Vm.NewStatus"/>      
+      </mat-form-field>
+      <button mat-icon-button (click)="OnClickSaveStatus()">
+        <mat-icon class="fas fa-check"></mat-icon>
+      </button>
+    </ng-container>
   </mat-grid-tile>
   <!-- <mat-grid-tile
   [colspan]="1"
