--- a/src/app/pages/initiative-tracker/initiative-tracker.component.html
+++ b/src/app/pages/initiative-tracker/initiative-tracker.component.html
@@ -74,7 +74,7 @@
     </mat-card-actions>
   </mat-card>
   <ng-container *ngIf="Phase === 3">
-    <app-initiative-list [InitList]="InitList"></app-initiative-list>
+    <app-initiative-list></app-initiative-list>
   </ng-container>
   
 </div>
